# cowSolver

./: Cargo.toml
crates/amm/: Cargo.toml
crates/amm/src/: balancer.rs  curve.rs  lib.rs  pools.rs  router.rs  types.rs  uniswap.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/core/src/solver/: engine.rs  matching.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: builder.rs  encoder.rs  lib.rs  types.rs  validator.rs
