[package]
name = "cow-amm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Ethereum
ethers = { version = "2.0", features = ["abigen", "ws"] }
alloy-primitives = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Math
num-bigint = "0.4"
num-traits = "0.2"

# Utilities
hex = "0.4"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
