[package]
name = "cow-settlement"
version = "0.1.0"
edition = "2021"
authors = ["0xtechroot <root@ancilar.com>"]
description = "Settlement builder for CoW Protocol solver with calldata encoding and transaction construction"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum dependencies
ethers = { version = "2.0", features = ["abigen", "ws"] }
alloy-primitives = "0.7"
alloy-sol-types = "0.7"

# Encoding and hashing
hex = "0.4"
sha3 = "0.10"

# Logging
tracing = "0.1"

# Internal dependencies
cow-core = { path = "../core" }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
